style.css
@font-face {
    font-family: Noto Sans SC;
    src: url(./assets/fonts/Nato-sans-sc/NotoSansSC-Regular.otf);
   }
@font-face {
    font-family: Noto Sans SC Bold;
    src: url(./assets/fonts/Nato-sans-sc/NotoSansSC-Bold.otf);
}
/* Боковое навигационное меню */
.sidenav {
    height: 100%; /* 100% Full-height */
    width: 0; /* 0 ширина - изменить это с помощью JavaScript */
    position: fixed; /* Оставайтесь на месте */
    z-index: 3000; /* Оставайтесь сверху */
    top: 0; /* Оставайтесь наверху */
    right: 0;
    background: #FFFFFF; /* Фон черный*/
    overflow-x: hidden; /* Отключить горизонтальную прокрутку */
    padding-top: 60px; /* Поместите контент в 60px сверху */
    transition: 0.5s; /* 0.5 второй эффект перехода слайда в боковой навигации */
  }
  
  /* Ссылки меню навигации */
  .sidenav a {
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 71px;
    color: #404040;
    text-decoration: none;
    display: block;
    margin-left: 26px;
    transition: 0.3s;
  }
  
  /* Когда вы наводите курсор мыши на навигационные ссылки, изменяется их цвет */
  .sidenav a:hover {
    color: #f1f1f1;
  }
  
  /* Положение и стиль кнопки закрытия (верхний правый угол) */
  .sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
  }
  
  /* Стиль содержимого страницы - используйте это, если вы хотите сдвинуть содержимое страницы вправо при открытии боковой навигации */
  #main {
    transition: margin-left .5s;
    padding: 20px;
  }
  
  /* На экранах меньшего размера, где высота меньше 450px, измените стиль sidenav (меньше отступов и меньший размер шрифта) */
  @media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
  }
body{
    margin: 0;
    padding: 0;
}
#header,#about-us,#what-we-offer,#benefits-to-you,#our-projects{
    display: grid;
    justify-items: center;
    align-items: center;
}
#nav{
    background: linear-gradient(252.83deg, rgba(249, 32, 32, 0.3328) 4.85%, rgba(43, 102, 255, 0.2964) 98.69%), #272727;
    background-blend-mode: color, normal;
    opacity: 0.87;
    position: fixed;
    z-index: 3000;
    width: 100%;
    height: 67px;
    display: grid;
    justify-items: center;
    align-items: center;
}
#nav h5{
    margin:0;
    font-size: 18px;
}
#toggle{
    justify-self: flex-end;
    grid-row: 1;
    color: rgba(255, 255, 255, 0.9);
    margin: 10px 20px;
    display: none;
}
#toggle span{
    font-size: 24px;
}
#telephone,#nav-pages{
    grid-row: 1;
}
#telephone{
    margin: 0% 0% 0% 9.44%;
    font-family: Noto Sans SC Bold;
    font-style: normal;
    font-size: 18px;
    line-height: 26px;
    color: #FFFFFF;
    justify-self: flex-start;
    text-decoration: none!important;
}
#nav-pages{
    justify-self: flex-end;
    margin: 0 25px;
}
#nav-pages a{
    font-family: Noto Sans SC;
    font-weight: normal;
    margin: 0px 10px;
    color: #FFFFFF;
    text-decoration: none!important;
}
#header{
    background-image: url(./assets/img/Rectangle\ 1.png);
    padding:67px 0px 0px 0px;
    background-repeat: no-repeat;
    background-size: cover;
    background-position-x: center;
    background-position-y: center;
    height: 931px;
}
#header #title h1{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: 900;
    font-size: 96px;
    text-align: center;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 6px 0px 0px rgba(255, 33, 33, 0.25), -8px 0px 0px rgba(27, 100, 209, 0.26);
    color: #FFFFFF;
    margin: 0;
}
#header #title h2{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 36px;
    text-align: center;
    color: #F0EFEF;
}
#header #subtitle{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 50px 0px;

}
#header #subtitle h4{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 28px;
    line-height: 41px;
    margin: 0 20px;  
    text-align: center;  
    color: #F0EFEF;
}
#header #subtitle hr{
    width: 89px;
    height: 0px;
    opacity: 0.5;
    border: 2px solid #FFFFFF;
    margin: 0;
}
#header #logos{
    display: flex;
    justify-content: center;
}
#header #logos .logo{
    margin: 0px 20px;
}
#about-us{
    background: linear-gradient(252.83deg, rgba(249, 32, 32, 0.16) 4.85%, rgba(43, 102, 255, 0.1425) 98.69%), #EEEAF1;
    background-blend-mode: color, normal;
}
#about-us h2{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 48px;
    line-height: 70px;
    margin-top: 37px;
    text-align: center;
    color: #272727;
    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 3px 0px 0px rgba(255, 33, 33, 0.15), -3px 0px 0px rgba(27, 100, 209, 0.16);
}
#about-us h6{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 21px;
    line-height: 30px;
    text-align: center;
    text-transform: uppercase;
    margin:0;
    color: #7B7581;
}
#about-us #text{
    width: 524px;
    height: 397px;   
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: normal;
    font-size: 18px;
    line-height: 30px;
    text-align: justify;  
    color: #000000;
    z-index: 100;
    grid-row: 1/1;
    grid-column: 1/1;
    position: relative;
    bottom: 441px;
}
#about-us p:first-child{
    padding-top: 16px;
}
#about-us #people{
    z-index: 200;
    position: relative;
    left: 30px;
}
#about-us #head-span{
    margin:0px 33px 0px 64px;
}
#about-us p,#head-span{
    display: inline-block;
}
#about-us-header{
    grid-row: 1;
}
#about-us #images{
    display: grid;
    grid-row: 2;
    justify-items: center;
    align-items: flex-end;
    position: relative;
    bottom: -4px;
    height: 825px;
}
#about-us #elipse-1,#elipse-2,#elipse-3,#people{
grid-row: 1/1;
grid-column: 1/1;
}
/* ... */

